[metadata]
name = siemens_logo
version = v0.1.0
requires_python = ">=3.8"
description = "A tool for siemens logo"
author = Milan Dušek
author_email = aldria@post.cz
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license=LICENSE
classifiers =
  Development Status :: 2 - Pre-Alpha
  Intended Audience :: Manufacturing
  Topic :: Home Automation
  License :: MIT License
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.8
setup_requires =
    setuptools_scm
    wheel
    toml

[options.entry_points]
console_scripts =
    pargen = flashcontainer.pargen:pargen_cli

[options.packages.find]
where=src

[options.package_data]
flashcontainer =
  pargen_1.0.xsd
  Concept.png